--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -3,23 +3,25 @@
   @documentContainer={{this.documentContainer}}
   @onTitleUpdate={{perform this.onTitleUpdate}}
   @allowTitleUpdate={{true}}
-  >
+  @dirty={{this.dirty}}
+>
   <:return-link>
     <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
   </:return-link>
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} @editorDocument={{this.editorDocument}} />
-      <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
+    <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
       <AuButton {{on "click" (perform this.copyAgendapunt)}} @skin="tertiary" role="menuitem">
-        <AuIcon @icon="copy" @alignment="left" />
+        <AuIcon @icon="copy" @alignment="left"/>
         {{t "appChrome.copyAgendapoint"}}
       </AuButton>
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
-        <AuIcon @icon="export" @alignment="left" />
+        <AuIcon @icon="export" @alignment="left"/>
         {{t "utils.htmlExport"}}
       </AuButton>
-      <AuButton {{on "click" this.toggleDeleteModal}} @skin="tertiary" @alert="true" role="menuitem" @disabled={{this.isNotAllowedToTrash}}>
-        <AuIcon @icon="bin" @alignment="left" />
+      <AuButton {{on "click" this.toggleDeleteModal}} @skin="tertiary" @alert="true" role="menuitem"
+                                                      @disabled={{this.isNotAllowedToTrash}}>
+        <AuIcon @icon="bin" @alignment="left"/>
         {{t "utils.delete"}}
       </AuButton>
     </AuDropdown>
