--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -22,7 +22,7 @@
         {{/if}}
       </Group>
     </AuToolbar>
-    <div class="au-c-editor-preview au-u-margin-top-small au-u-margin-bottom-large">
+    <div class="au-c-editor-preview au-u-margin-top-small au-u-margin-bottom-large administrative-unit-{{this.administrativeUnitName}}">
       {{#if (has-block)}}
         {{yield}}
       {{else}}
