--- a/app/styles/project/admin-unit/_essen.scss
+++ b/app/styles/project/admin-unit/_essen.scss
@@ -22,4 +22,17 @@
       padding-left: 1.5rem;
     }
   }
+
+  div[typeof="besluit:BehandelingVanAgendapunt"] {
+    h3 {
+      color: var(--essen-color-black);
+      font-size: 20px;
+    }
+
+    div.c-template-content.c-template-content--treatment {
+      margin-top: 0.5rem;
+      padding-top: 0.5rem;
+      border-top: 0;
+    }
+  }
 }
