Improve Gent styling

--- a/app/components/publication-preview.hbs
+++ b/app/components/publication-preview.hbs
@@ -8,7 +8,7 @@
     </AuPill>
   </Group>
 </AuToolbar>
-<div class="au-c-editor-preview au-u-margin-top-small au-u-margin-bottom-large">
+<div class="au-c-editor-preview au-u-margin-top-small au-u-margin-bottom-large administrative-unit-{{this.administrativeUnitName}}">
   {{#if (has-block)}}
     {{yield}}
   {{else}}
