Refactor Gent styling into mixins

--- a/app/styles/project/admin-unit/_gent.scss
+++ b/app/styles/project/admin-unit/_gent.scss
@@ -1,5 +1,28 @@
 @import 'utils';
 
+@mixin font-styles {
+  --au-font: "Fira Sans", sans-serif;
+  font-family: "Fira Sans", sans-serif !important;
+  font-size: 16px !important;
+}
+
+@mixin header-styles {
+  h1, h2, h3, h4, h5, h6 {
+    color: var(--gent-color-cyan) !important;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-weight: 500;
+    font-size: 22px;
+  }
+}
+
 @include admin-unit(gent) {
   --gent-color-cyan: #009de0;
   --gent-color-dark-dark-gray: #23333a;
@@ -8,22 +31,8 @@
   color: var(--gent-color-dark-dark-gray);
 
   li[typeof='besluit:Agendapunt'] {
-    --au-font: "Fira Sans", sans-serif;
-
-    font-family: "Fira Sans", sans-serif;
-    font-size: 16px !important;
-
-    h1, h2, h3, h4, h5, h6 {
-      font-family: "Fira Sans", sans-serif;
-      color: var(--gent-color-cyan);
-
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    h2 {
-      font-size: 22px;
-    }
+    @include font-styles;
+    @include header-styles;
 
     p {
       color: var(--gent-color-dark-dark-gray) !important;
@@ -32,24 +41,10 @@
   }
 
   div[typeof="besluit:BehandelingVanAgendapunt"] {
-    --au-font: "Fira Sans", sans-serif;
     color: var(--gent-color-dark-dark-gray) !important;
 
-    font-family: "Fira Sans", sans-serif !important;
-    font-size: 16px !important;
-
-    h1, h2, h3, h4, h5, h6 {
-      font-family: "Fira Sans", sans-serif !important;
-      color: var(--gent-color-cyan) !important;
-
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    h3 {
-      font-weight: 500;
-      font-size: 22px;
-    }
+    @include font-styles;
+    @include header-styles;
 
     table {
       margin-top: 1rem;
