--- a/app/styles/project/admin-unit/_essen.scss
+++ b/app/styles/project/admin-unit/_essen.scss
@@ -1,5 +1,30 @@
 @import 'utils';
 
+@mixin header-styles {
+  h1, h2, h3, h4, h5, h6 {
+    color: var(--essen-color-dark-orange) !important;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-weight: 500;
+    font-size: 22px;
+  }
+}
+
+@mixin font-styles {
+  --au-font: "Fira Sans", sans-serif;
+
+  color: var(--essen-color-black) !important;
+  font-family: "Fira Sans", sans-serif !important;
+  font-size: 16px !important;
+}
+
 @include admin-unit(essen) {
   --essen-color-black: #000000;
   --essen-color-dark-green: #52a63a;
@@ -12,18 +37,27 @@
   color: var(--essen-color-black);
 
   li[typeof='besluit:Agendapunt'] {
+    @include header-styles;
+    @include font-styles;
+
     h2 {
       font-size: var(--au-para);
     }
 
     p {
-      color: var(--essen-color-black);
       margin-top: 0;
       padding-left: 1.5rem;
     }
   }
 
   div[typeof="besluit:BehandelingVanAgendapunt"] {
+    @include header-styles;
+    @include font-styles;
+
+    table {
+      margin-top: 1rem;
+    }
+
     h3 {
       color: var(--essen-color-black);
       font-size: 20px;
@@ -33,6 +67,8 @@
       margin-top: 0.5rem;
       padding-top: 0.5rem;
       border-top: 0;
+
+      padding-left: 2.5rem;
     }
   }
 }
