Solve all errors of bare strings in template

--- a/app/components/agenda-manager/agenda-table/row.hbs
+++ b/app/components/agenda-manager/agenda-table/row.hbs
@@ -21,9 +21,7 @@
 {{else}}
   <DraggableObject @tagName="tr" @content={{@item}} @isSortable={{true}}>
     <td>
-      <AuButton @icon="drag" @skin="tertiary" @hideText={{true}} class="au-c-button--drag">
-        Sleep
-      </AuButton>
+      <AuButton @icon="drag" @skin="tertiary" @hideText={{true}} class="au-c-button--drag"></AuButton>
     </td>
     <td>
       <p>{{limit-content @item.titel 40}}</p>
