--- a/app/components/agendapoint-menu.hbs
+++ b/app/components/agendapoint-menu.hbs
@@ -1,4 +1,4 @@
-<AuButtonGroup @inline={{true}} role="tablist" aria-label="editor-tabs">
+<AuButtonGroup @inline={{true}} role="tablist" aria-label={{t "editor-tabs"}}>
   <AuLink @route="agendapoints.edit"   class="au-u-margin-bottom-none"  @skin="button-secondary" @icon="document" @iconAlignment="left" @model={{@documentContainer.id}}>
     {{t "attachments.return"}}
   </AuLink>
