--- a/app/components/manage-intermissions/edit.hbs
+++ b/app/components/manage-intermissions/edit.hbs
@@ -56,7 +56,7 @@
         {{/if}}
       </div>
       <div>
-        <AuLabel for="intermissionComment">{{t "manage-intermissions.comment-label"}} <AuPill>Optioneel</AuPill></AuLabel>
+        <AuLabel for="intermissionComment">{{t "manage-intermissions.comment-label"}} <AuPill>{{t "manage-agenda-zitting-modal-move.optional"}}</AuPill></AuLabel>
         <AuTextarea id="intermissionComment" @value={{this.commentExternal}} @width="block"></AuTextarea>
       </div>
     </div>
