--- a/app/components/not-found-warning.hbs
+++ b/app/components/not-found-warning.hbs
@@ -6,7 +6,7 @@
         <p>{{t "not-found.body.contact-message"}} <AuLink @route="contact">{{t "not-found.body.contact-link"}}</AuLink>
         </p>
         <p>{{t "not-found.body.email-message"}} <a href="mailto:gelinktnotuleren@vlaanderen.be"
-            class="au-c-link">GelinktNotuleren@vlaanderen.be</a></p>
+            class="au-c-link">{{t "not-found.body.email"}}</a></p>
       </AuAlert>
     </div>
   </section>
