--- a/app/components/participation-list/modal.hbs
+++ b/app/components/participation-list/modal.hbs
@@ -17,7 +17,7 @@
         />
       </div>
       <div>
-        <AuLabel>Secretaris van de zitting</AuLabel>
+        <AuLabel>{{t "participation-list-modal.secretaris-label"}}</AuLabel>
         <ParticipationList::FunctionarisSelector
                 @onSelect={{this.selectSecretary}}
                 @functionaris={{this.secretary}}
