--- a/app/components/print-view/signature.hbs
+++ b/app/components/print-view/signature.hbs
@@ -1,5 +1,5 @@
 <div class="au-o-grid__item au-u-1-2@medium">
-  <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">Ondertekend door</AuHeading>
+  <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "print-view.signed-by"}}</AuHeading>
   <p>{{@fullName}} <br> {{detailed-date @createdOn}}</p>
   <p>{{@hashValue}}</p>
 </div>
