--- a/app/components/signatures/notulen/behandelingen-list.hbs
+++ b/app/components/signatures/notulen/behandelingen-list.hbs
@@ -7,21 +7,21 @@
       <div class="au-o-box au-c-editor-preview-treatment__info {{if isPublicBehandeling "au-c-editor-preview-treatment__info--public" "au-c-editor-preview-treatment__info--private"}} ">
         {{#if this.isPublished}}
           {{#if isPublicBehandeling}}
-            <p><strong>Inhoud werd gepubliceerd</strong></p>
-            <p class="au-c-help-text au-c-help-text--normal">Alle informatie uit de behandeling van het agendapunt werd gepubliceerd.</p>
+            <p><strong>{{t "behandeling-list.public-past"}}</strong></p>
+            <p class="au-c-help-text au-c-help-text--normal">{{t "behandeling-list.public-description"}}</p>
           {{else}}
-            <p><strong>Inhoud werd niet gepubliceerd</strong></p>
-            <p class="au-c-help-text au-c-help-text--normal">De titel en de openbaarheid van de behandeling worden wel gepubliceerd. Voor besluiten worden ook de titel van het besluit en de korte omschrijving gepubliceerd.</p>
+            <p><strong>{{t "behandeling-list.not-public-past"}}</strong></p>
+            <p class="au-c-help-text au-c-help-text--normal">{{t "behandeling-list.not-public-past-description"}}</p>
           {{/if}}
         {{else}}
           <AuToggleSwitch @label="Maak inhoud agendapunt publiek" @checked={{isPublicBehandeling}} @onChange={{fn @toggle preview}} />
           <AuHr />
           {{#if isPublicBehandeling}}
-            <p><strong>Inhoud wordt gepubliceerd</strong></p>
-            <p class="au-c-help-text au-c-help-text--normal">Alle informatie uit de behandeling van het agendapunt wordt gepubliceerd.</p>
+            <p><strong>{{t "behandeling-list.public-now"}}</strong></p>
+            <p class="au-c-help-text au-c-help-text--normal">{{t "behandeling-list.public-now-description"}}</p>
           {{else}}
-            <p><strong>Inhoud wordt niet gepubliceerd</strong></p>
-            <p class="au-c-help-text au-c-help-text--normal">De titel en de openbaarheid van de behandeling worden wel gepubliceerd. Voor besluiten worden ook de titel van het besluit en de korte omschrijving gepubliceerd.</p>
+            <p><strong>{{t "behandeling-list.not-public-now"}}</strong></p>
+            <p class="au-c-help-text au-c-help-text--normal">{{t "behandeling-list.not-public-now-description"}}</p>
           {{/if}}
         {{/if}}
       </div>
