--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,9 +1,9 @@
 <VoPage>
   <section class="au-o-region-large">
     <div class="au-o-layout">
-      <AuHeading class="au-u-margin-bottom">Contact</AuHeading>
+      <AuHeading class="au-u-margin-bottom">{{t "contact.heading"}}</AuHeading>
       <ContactForm />
-      <p class="au-u-margin-top">Of neem rechtstreeks contact op via mail <a href="mailto:gelinktnotuleren@vlaanderen.be" class="au-c-link">GelinktNotuleren@vlaanderen.be</a>.</p>
+      <p class="au-u-margin-top">{{t "contact.contact-directly"}} <a href="mailto:gelinktnotuleren@vlaanderen.be" class="au-c-link">{{t "contact.email"}}</a>.</p>
     </div>
   </section>
 </VoPage>
