--- a/app/templates/inbox/loading.hbs
+++ b/app/templates/inbox/loading.hbs
@@ -1,5 +1,5 @@
 <div class="au-o-box">
-  <AuHeading @skin="2" class="au-u-margin-bottom-small">Aan het laden</AuHeading>
+  <AuHeading @skin="2" class="au-u-margin-bottom-small">{{t "inbox.loading"}}</AuHeading>
   <AuLoader @padding="small" />
-  <AuHelpText @size="normal">Bedankt voor uw geduld.</AuHelpText>
+  <AuHelpText @size="normal">{{t "inbox.patience-text"}}</AuHelpText>
 </div>
