--- a/app/templates/irg-archive/show.hbs
+++ b/app/templates/irg-archive/show.hbs
@@ -25,7 +25,7 @@
       <div class="say-container__main">
           <div class="au-o-box au-o-box--small au-u-background-gray-100">
             <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
-              <p>Dit is een gearchiveerd document en kan niet worden gewijzigd.</p>
+              <p>{{t "inbox.irg-archive.archived-warning"}}</p>
             </AuAlert>
           </div>
         <div class="say-editor rdfa-annotations rdfa-annotations-hover rdfa-annotations--disabled">
