--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-bare-strings  --}}
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Disclaimer</AuHeading>
   <h2>Gebruik van de website</h2>
