--- a/app/templates/switch-login.hbs
+++ b/app/templates/switch-login.hbs
@@ -4,10 +4,10 @@
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-3-4@small au-u-1-2@medium">
             <AuContent @skin="large">
-              <h1>Gelinkt Notuleren</h1>
-              <p class="au-c-heading au-c-heading--4">Een webapplicatie die helpt met het opmaken en publiceren van agenda's, notulen en besluiten voor Lokale Besturen.</p>
-              <p>Lukt het aanmelden niet? Neem contact op met uw interne beheerder. Indien er zich een probleem voordoet, contacteer <a class="au-c-link" href="https://overheid.vlaanderen.be/ict/ict-diensten/gebruikersbeheer">gebruikersbeheer Vlaanderen</a>.</p>
-              <p>Het aanmelden gebeurt in een pop-up; zorg dat de instellingen van uw browser correct staan indien deze niet verschijnt.</p>
+              <h1>{{t "switch-login.heading"}}</h1>
+              <p class="au-c-heading au-c-heading--4">{{t "switch-login.app-description"}}</p>
+              <p>{{t "switch-login.contact-text"}} <a class="au-c-link" href="https://overheid.vlaanderen.be/ict/ict-diensten/gebruikersbeheer">{{t "switch-login.user-admin"}}</a>.</p>
+              <p>{{t "switch-login.signing-instructions"}}</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
