--- a/app/components/contact-form.hbs
+++ b/app/components/contact-form.hbs
@@ -1,19 +1,19 @@
 {{yield}}
 <form class="au-c-form js-formvalidation-bound">
-  <AuLabel for="select">Waar gaat uw bericht over?</AuLabel>
+  <AuLabel for="select">{{t "contact.about"}}</AuLabel>
   <ul>
     <li>
-      <AuControlRadio @label="Een functionaliteit, bug of probleem" @value="GelinktNotuleren@vlaanderen.be?subject=Functionaliteit of bug of probleem" @name="type-vraag" @onChange={{this.setMailto}} />
+      <AuControlRadio @label={{t "contact.bug-message"}} @value="GelinktNotuleren@vlaanderen.be?subject=Functionaliteit of bug of probleem" @name="type-vraag" @onChange={{this.setMailto}} />
 
     </li>
     <li>
-      <AuControlRadio @label="Een inhoudelijke vraag" @name="type-vraag" @value="GelinktNotuleren@vlaanderen.be?subject=Inhoudelijke vraag" @onChange={{this.setMailto}} />
+      <AuControlRadio @label={{t "contact.question-message"}} @name="type-vraag" @value="GelinktNotuleren@vlaanderen.be?subject=Inhoudelijke vraag" @onChange={{this.setMailto}} />
     </li>
   </ul>
   {{#if this.mailto}}
-    <a href={{concat "mailto:" this.mailto}} class="au-c-button">Bericht versturen</a>
+    <a href={{concat "mailto:" this.mailto}} class="au-c-button">{{t "contact.send"}}</a>
   {{else}}
-    <AuButton @disabled="true">Stel bericht op</AuButton>
+    <AuButton @disabled="true">{{t "contact.compose"}}</AuButton>
   {{/if}}
   <div class="form__error" aria-describedby="radio-buttons"></div>
 </form>
