--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -8,7 +8,7 @@
       <div class="au-c-app-chrome__title-group {{if this.error "au-c-input--error"}}">
         {{#let (unique-id) as |id|}}
           <AuLabel for={{id}} class="au-u-hidden-visually">
-            agendapunt titel
+            {{t "editor-document-title-agendapoint-title"}}
           </AuLabel>
             <input
               class="au-c-app-chrome__title-input {{if this.error "au-c-input--error"}}"
@@ -26,13 +26,13 @@
           @skin="secondary"
           @icon="check"
           @hideText={{true}}
-        >Titel aanpassen</AuButton>
+        >{{t "editor-document-title.change-title"}}</AuButton>
       </div>
     </form>
   {{else}}
     <h1 class="au-c-app-chrome__title au-c-app-chrome__title--edit" title={{this.title}}>
       {{limit-content this.title 70}} 
-      <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >titel wijzigen</AuButton>
+      <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >{{t "editor-document-title.change-title"}}</AuButton>
     </h1>
   {{/if}}
 
