--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -28,7 +28,7 @@
         {{#unless this.readOnly}}
           <div class="au-o-box au-o-box--small au-u-background-gray-100">
             <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
-              <p>Dit artikel is reeds gepubliceerd. Gepubliceerde agendapunten zijn niet editeerbaar.</p>
+              <p>{{t "agendapoint.published"}}</p>
             </AuAlert>
           </div>
         {{/unless}}
@@ -40,9 +40,9 @@
                 <AuLoader @padding="small" />
                 <AuHelpText @size="large">
                   {{#if this.saveTask.isRunning}}
-                    Bezig met opslaan
+                    {{t "agendapoint.saving"}}
                   {{else}}
-                    Kopie aan het maken
+                    {{t "agendapoint.making-copy"}}
                   {{/if}}
                 </AuHelpText>
               </div>
