--- a/app/templates/legaal/cookieverklaring.hbs
+++ b/app/templates/legaal/cookieverklaring.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-bare-strings  --}}
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Cookieverklaring</AuHeading>
   <h2>Cookiebeleid van Agentschap Binnenlands Bestuur</h2>
