--- a/app/templates/legaal/toegankelijkheidsverklaring.hbs
+++ b/app/templates/legaal/toegankelijkheidsverklaring.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-bare-strings  --}}
 <AuContent class="au-u-3-4@medium">
   <AuHeading>Toegankelijkheidsverklaring</AuHeading>
   <p>Agentschap Binnenlands Bestuur streeft ernaar zijn websites en mobiele applicaties toegankelijk te maken, overeenkomstig het <a href="http://www.ejustice.just.fgov.be/eli/decreet/2018/12/07/2018032457/justel" target="_blank" rel="noopener noreferrer">Bestuursdecreet van 7 december 2018</a>.</p>
