--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,10 +4,10 @@
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-3-4@small au-u-1-2@medium">
             <AuContent @skin="large">
-              <h1>Gelinkt Notuleren</h1>
-              <p class="au-c-heading au-c-heading--4">Een webapplicatie die helpt met het opmaken en publiceren van agenda's, notulen en besluiten voor Lokale Besturen.</p>
-              <p>Lukt het aanmelden niet? Neem contact op met uw interne beheerder. Indien er zich een probleem voordoet, contacteer <a class="au-c-link" href="https://overheid.vlaanderen.be/ict/ict-diensten/gebruikersbeheer">gebruikersbeheer Vlaanderen</a>.</p>
-              <p>Het aanmelden gebeurt in een pop-up; zorg dat de instellingen van uw browser correct staan indien deze niet verschijnt.</p>
+              <h1>{{t "login.app-name"}}</h1>
+              <p class="au-c-heading au-c-heading--4">{{t "login.description"}}</p>
+              <p>{{t "login.problems-text"}} <a class="au-c-link" href="https://overheid.vlaanderen.be/ict/ict-diensten/gebruikersbeheer">{{t "login.gebruikersbeheer"}}</a>.</p>
+              <p>{{t "login.signing-instructions"}}</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
@@ -20,28 +20,28 @@
   <section class="au-o-region-large au-u-background-gray-200">
     <div class="au-o-layout">
       <AuContent @skin="large" class="au-u-margin-bottom">
-        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">De functionaliteiten van Gelinkt Notuleren</AuHeading>
-        <p>Alle functionaliteiten, samen met handige tips & tricks, kan u bekijken in handleiding. <a class="au-c-link" href="{{config "manual.baseUrl"}}" target="_blank" rel="noopener noreferrer" >Bekijk de handleiding hier.</a></p>
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">{{t "login.functionality-heading"}}</AuHeading>
+        <p>{{t "login.present-in-manual"}} <a class="au-c-link" href="{{config "manual.baseUrl"}}" target="_blank" rel="noopener noreferrer" >{{t "login.view-manual"}}</a></p>
       </AuContent>
       <div class="au-o-grid au-o-grid--small">
         <div class="au-o-grid__item au-u-1-2@small">
           <AuCard @textCenter="true" as |c|>
             <c.header @badgeSkin="brand" @badgeIcon="pencil">
               <AuHeading @level="3" @skin="4">
-                Notuleren
+                {{t "login.meeting-heading"}}
               </AuHeading>
             </c.header>
             <c.content>
-              <p>Notuleer uw zitting met behulp van het online tekstverwerkingsprogramma.</p>
+              <p>{{t "login.record-your-session"}}</p>
               <ul>
-                <li>Gebruik de de ingebouwde <strong>sjablonen</strong> om besluiten te vormen;</li>
-                <li>link naar de juiste <strong>wetgeving uit de Vlaamse codex</strong>;</li>
-                <li>notuleer technisch conform de opgelegde <strong>standaarden</strong>;</li>
+                <li>{{t "login.meeting-1-1"}} <strong>{{t "login.meeting-1-2"}}</strong> {{t "login.meeting-1-3"}}</li>
+                <li>{{t "login.meeting-2-1"}} <strong>{{t "login.meeting-2-2"}}</strong></li>
+                <li>{{t "login.meeting-3-1"}} <strong>{{t "login.meeting-3-2"}}</strong></li>
               </ul>
             </c.content>
             <c.footer>
               <p>
-                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.notuleren"}}" rel="noopener noreferrer" target="_blank">Bekijk de handleiding</a>
+                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.notuleren"}}" rel="noopener noreferrer" target="_blank">{{t "login.view-manual"}}</a>
               </p>
             </c.footer>
           </AuCard>
@@ -51,20 +51,20 @@
           <AuCard @textCenter="true" as |c|>
             <c.header @badgeSkin="brand" @badgeIcon="user-popup">
               <AuHeading @level="3" @skin="4">
-                Ondertekenen &amp; Valideren
+                {{t "login.sign-and-validate"}}
               </AuHeading>
             </c.header>
             <c.content>
-              <p>Uw documenten blijven online authentiek en veilig bewaard.</p>
+              <p>{{t "login.sign-description"}}</p>
               <ul>
-                <li>Enkel personen met de <strong>juiste bevoegdheid</strong> kunnen documenten ondertekenen;</li>
-                <li>documenten worden online <strong>getekend en verzegeld</strong>;</li>
-                <li>documenten kunnen op elk moment <strong>gevalideerd worden op echtheid</strong>.</li>
+                <li>{{t "login.sign-1-1"}} <strong>{{t "login.sign-1-2"}}</strong> {{t "login.sign-1-3"}}</li>
+                <li>{{t "login.sign-2-1"}} <strong>{{t "login.sign-2-2"}}</strong></li>
+                <li>{{t "login.sign-3-1"}} <strong>{{t "login.sign-3-2"}}</strong></li>
               </ul>
             </c.content>
             <c.footer>
               <p>
-                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.signing"}}" target="_blank" rel="noopener noreferrer">Bekijk de handleiding</a>
+                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.signing"}}" target="_blank" rel="noopener noreferrer">{{t "login.view-manual"}}</a>
               </p>
             </c.footer>
           </AuCard>
@@ -74,20 +74,20 @@
           <AuCard @textCenter="true" as |c|>
             <c.header @badgeSkin="brand" @badgeIcon="user-fill">
               <AuHeading @level="3" @skin="4">
-                Mandatenbeheer
+                {{t "login.mandate-management"}}
               </AuHeading>
             </c.header>
             <c.content>
-              <p>Vul automatisch de mandatendatabank aan bij het publiceren van uw notulen.</p>
+              <p>{{t "login.mandate-description"}}</p>
               <ul>
-                <li>De tekstverwerker <strong>herkent automatisch de juiste mandatarissen</strong> in uw besluiten;</li>
-                <li>maak gebruik van sjablonen voor het <strong>wijzigen van mandaten</strong>;</li>
-                <li>wijzigingen in mandaten worden bij publicatie <strong>automatisch up-to-date gebracht in de mandatendatabank</strong>.</li>
+                <li>{{t "login.mandate-1-1"}} <strong>{{t "login.mandate-1-2"}}</strong> {{t "login.mandate-1-3"}}</li>
+                <li>{{t "login.mandate-2-1"}} <strong>{{t "login.mandate-2-2"}}</strong></li>
+                <li>{{t "login.mandate-3-1"}} <strong>{{t "login.mandate-3-2"}}</strong></li>
               </ul>
             </c.content>
             <c.footer>
               <p>
-                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.mandatees"}}" target="_blank" rel="noopener noreferrer">Bekijk de handleiding</a>
+                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.mandatees"}}" target="_blank" rel="noopener noreferrer">{{t "login.view-manual"}}</a>
               </p>
             </c.footer>
           </AuCard>
@@ -97,20 +97,20 @@
           <AuCard @textCenter="true" as |c|>
             <c.header @badgeSkin="brand" @badgeIcon="documents">
               <AuHeading @level="3" @skin="4">
-                Publiceren
+                {{t "login.publication"}}
               </AuHeading>
             </c.header>
             <c.content>
-              <p>Documenten worden met het juiste niveau van beveiliging online ter beschikking gesteld.</p>
+              <p>{{t "login.publication-description"}}</p>
               <ul>
-                <li>Stel essentiële informatie ter beschikking voor de <strong>leden van uw bestuur</strong>;</li>
-                <li>breng <strong>toezichthoudende overheden</strong> op de hoogte en voldoe aan de <strong>publicatieplicht</strong> met de druk van een knop;</li>
-                <li>geef burgers eenvoudig toegang tot <strong>publieke informatie</strong>.</li>
+                <li>{{t "login.publication-1-1"}} <strong>{{t "login.publication-1-2"}}</strong></li>
+                <li>{{t "login.publication-2-1"}} <strong>{{t "login.publication-2-2"}}</strong> {{t "login.publication-2-3"}} <strong>{{t "login.publication-2-4"}}</strong> {{t "login.publication-2-5"}}</li>
+                <li>{{t "login.publication-3-1"}} <strong>{{t "login.publication-3-2"}}</strong></li>
               </ul>
             </c.content>
             <c.footer>
               <p>
-                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.publish"}}" target="_blank" rel="noopener noreferrer">Bekijk de handleiding</a>
+                <a class="au-c-button" href="{{config "manual.baseUrl"}}{{config "manual.publish"}}" target="_blank" rel="noopener noreferrer">{{t "login.view-manual"}}</a>
               </p>
             </c.footer>
           </AuCard>
