--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -10,11 +10,11 @@
       <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
         <Acmidm::Switch as |acmidm|>
           <AuButton @loading={{acmidm.isSwitching}} class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" acmidm.switch}}>
-            <AuIcon @icon="switch" @alignment="left" />Wissel van bestuurseenheid
+            <AuIcon @icon="switch" @alignment="left" />{{t "application-header.switch-administrative-unit"}}
           </AuButton>
         </Acmidm::Switch>
         <button type="button" class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" this.logout}}>
-          <AuIcon @icon="logout" @alignment="left" />Afmelden
+          <AuIcon @icon="logout" @alignment="left" />{{t "application-header.logout"}}
         </button>
       </AuDropdown>
     </Group>
@@ -29,25 +29,25 @@
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.agenda" @model={{@model.id}}>
                 <AuIcon @icon="calendar" @alignment="left" />
-                Agenda
+                {{t "meetings.publish.agenda"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.besluitenlijst" @model={{@model.id}}>
                 <AuIcon @icon="unordered-list" @alignment="left" />
-                Besluitenlijst
+                {{t "meetings.publish.decision-list"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.uittreksels" @model={{@model.id}}>
                 <AuIcon @icon="documents" @alignment="left" />
-                Uittreksels
+                {{t "meetings.publish.extracts"}}
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
               <AuNavigationLink @route="meetings.publish.notulen" @model={{@model.id}}>
                 <AuIcon @icon="document" @alignment="left" />
-                Notulen
+                {{t "meetings.publish.document"}}
               </AuNavigationLink>
             </li>
           </ul>
