--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -12,11 +12,11 @@
 
     <div class="au-o-region-large">
       <div class="au-o-layout">
-        <AuHeading @skin="4">Kies een bestuurseenheid om mee in te loggen.</AuHeading>
+        <AuHeading @skin="4">{{t "mock-login.administrative-unit-selection"}}</AuHeading>
         <p class="au-u-margin-top-small au-u-margin-bottom">
           {{#let (unique-id) as |id|}}
-            <AuLabel for={{id}}>Bestuurseenheid zoeken</AuLabel>
-            <input class="au-c-input au-c-input--block js-js-input-pattern-bound" id={{id}} placeholder="Aalst, Berchem, &hellip;" value={{this.gemeente}} autofocus oninput={{perform this.updateSearch value='target.value'}}>
+            <AuLabel for={{id}}>{{t "mock-login.administrative-unit-search"}}</AuLabel>
+            <input class="au-c-input au-c-input--block js-js-input-pattern-bound" id={{id}} placeholder={{t "mock-login.search-placeholder"}} value={{this.gemeente}} autofocus oninput={{perform this.updateSearch value='target.value'}}>
           {{/let}}
         </p>
 
