--- a/app/styles/project/admin-unit/_essen.scss
+++ b/app/styles/project/admin-unit/_essen.scss
@@ -36,7 +36,7 @@
   --au-gray-900: var(--essen-color-black);
   color: var(--essen-color-black);
 
-  li[typeof='besluit:Agendapunt'] {
+  @include agendapunt {
     @include header-styles;
     @include font-styles;
 
@@ -50,7 +50,7 @@
     }
   }
 
-  div[typeof="besluit:BehandelingVanAgendapunt"] {
+  @include behandeling-van-agendapunt {
     @include header-styles;
     @include font-styles;
 
@@ -62,14 +62,6 @@
       color: var(--essen-color-black);
       font-size: 20px;
     }
-
-    div.c-template-content.c-template-content--treatment {
-      margin-top: 0.5rem;
-      padding-top: 0.5rem;
-      border-top: 0;
-
-      padding-left: 2.5rem;
-    }
   }
 }
 
@@ -80,6 +72,7 @@
   src: url(https://fonts.gstatic.com/l/font?kit=J7adnpV-BGlaFfdAhLQo6btPMDoTpA&skey=36a3d5758e0e2f58&v=v15) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 @font-face {
   font-family: 'Calibri';
   font-style: italic;
@@ -87,6 +80,7 @@
   src: url(https://fonts.gstatic.com/l/font?kit=J7aYnpV-BGlaFfdAhLQgUp5aHRgejiMIKQ&skey=8b00183e5f6700b6&v=v15) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 @font-face {
   font-family: 'Calibri';
   font-style: normal;
@@ -94,6 +88,7 @@
   src: url(https://fonts.gstatic.com/l/font?kit=J7afnpV-BGlaFfdAhLEY67FIEjg&skey=a1029226f80653a8&v=v15) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 @font-face {
   font-family: 'Calibri';
   font-style: normal;
