--- a/app/components/signatures/signature-confirmation.hbs
+++ b/app/components/signatures/signature-confirmation.hbs
@@ -33,7 +33,7 @@
       </div>
       <div class="au-o-grid__item au-u-2-3">
         <div class="au-c-rdfa-publication-holder">
-          <div class="au-c-rdfa-publication say-content rdfa-annotations behandeling-preview">
+          <div class="au-c-rdfa-publication say-content rdfa-annotations behandeling-preview administrative-unit-{{this.administrativeUnitName}}">
             {{#if (has-block)}}
               {{yield}}
             {{else}}
