Add style to Print view

--- a/app/components/print-view/print-body.hbs
+++ b/app/components/print-view/print-body.hbs
@@ -1,6 +1,6 @@
 <section class="au-o-box" id="main">
   <div class="au-o-grid">
-    <div class="au-o-grid__item au-u-3-4@large au-u-wide-on-print">
+    <div class="au-o-grid__item au-u-3-4@large au-u-wide-on-print administrative-unit-{{this.administrativeUnitName}}">
       {{yield}}
     </div>
   </div>
