--- a/app/styles/project/admin-unit/_essen.scss
+++ b/app/styles/project/admin-unit/_essen.scss
@@ -1,5 +1,14 @@
 @import 'utils';
 
+@mixin font-styles {
+  --au-font: "Calibri", sans-serif;
+
+  color: var(--essen-color-black) !important;
+
+  font-family: "Calibri", sans-serif !important;
+  font-size: 16px !important;
+}
+
 @mixin header-styles {
   h1, h2, h3, h4, h5, h6 {
     color: var(--essen-color-dark-orange) !important;
@@ -12,18 +21,17 @@
   }
 
   h3 {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 700;
   }
 }
 
-@mixin font-styles {
-  --au-font: "Calibri", sans-serif;
-
-  color: var(--essen-color-black) !important;
-  font-family: "Calibri", sans-serif !important;
-  font-size: 16px !important;
+@mixin table-styles {
+  table {
+    margin-top: 1rem;
+  }
 }
+
 
 @include admin-unit(essen) {
   --essen-color-black: #000000;
@@ -36,10 +44,6 @@
     @include header-styles;
     @include font-styles;
 
-    h2 {
-      font-size: var(--au-para);
-    }
-
     p {
       margin-top: 0;
       padding-left: 1.5rem;
@@ -49,15 +53,7 @@
   @include behandeling-van-agendapunt {
     @include header-styles;
     @include font-styles;
-
-    table {
-      margin-top: 1rem;
-    }
-
-    h3 {
-      color: var(--essen-color-black);
-      font-size: 20px;
-    }
+    @include table-styles;
   }
 }
 
